--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-async-handler": "^1.2.0",
+        "helmet": "^5.0.2",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.4",
         "mysql2": "^2.3.3",
